# spinnaker-wrapper

./: README.md
spinnaker_wrapper/: CMakeLists.txt  package.xml
spinnaker_wrapper/include/spinnaker_wrapper/: spinnaker_wrapper.hpp
spinnaker_wrapper/launch/: acquisition.launch
spinnaker_wrapper/src/: acquisition_node.cpp  spinnaker_wrapper.cpp
